--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.26.4
+streamlit
+numpy
+Pillow
+gdown
 opencv-python-headless==4.7.0.72
-scikit-learn==1.3.2
-matplotlib==3.7.5
-streamlit==1.30.0
-torch==2.2.0
-torchvision==0.17.0
-Pillow==10.2.0
+torch==2.0.0+cpu
+torchvision==0.15.1+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
