--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
+streamlit==1.40.2
 numpy
 Pillow
 gdown
-opencv-python-headless==4.7.0.72
-torch==2.0.0+cpu
-torchvision==0.15.1+cpu
+opencv-python-headless==4.8.0.74
+
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
