--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
 numpy
 Pillow
-gdown
 opencv-python-headless==4.7.0.72
-torch==2.0.1
-torchvision==0.15.2
+
+# PyTorch CPU wheels (Cloud-compatible)
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
