--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ streamlit
 numpy
 Pillow
 opencv-python-headless==4.7.0.72
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1
+torchvision==0.20.1
